# notepad

./: README.md  dc.prod-github-actions.yml  dc.prod-integration-tests.yml  dc.prod-local.yml  docker-compose.prod.yml  docker-compose.yml  notepad.code-workspace  prod-local-build-all.sh
.github/workflows/: build_docker_images.yml  main_workflow.yml
backend/: .dockerignore  .env.example  .gitignore  ChangeLog.md  Dockerfile.prod  Dockerfile.prod.backend-artifacts  Dockerfile.prod.backend_artifacts  Dockerfile.prod.server  README.md  haskell-spock.cabal  notepad.cabal  package.yaml  stack.yaml  test.sh
backend/app/: Connect.hs  Main.hs
backend/src/: CodegenMain.hs  CommandProcessor.hs  ConcurrencyHelpers.hs  Database.hs  DomainCommand.hs  DomainEvent.hs  EventProcessor.hs  EventRegistrator.hs  HttpServer.hs  HttpTypes.hs  Lib.hs  Main.hs  MasterProjection.hs  Projection.hs  Queries.hs  ValidationProjection.hs
backend/src/Types/: Either.hs  Uuid.hs  WithUuid.hs
backend/src/Utils/: Codegen.hs  Concurrency.hs  ElmDeriving.hs
db/: .gitignore  1.init.sql  2.populate.sql
docs/: TODO.md  notepad.drawio
frontend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  elm.json  index.src.html  package-lock.json  package.json  substitute_variables.sh
frontend/configs/: 21-substitute_variables.sh  nginx.prod.conf
frontend/review/src/: ReviewConfig.elm
frontend/src/: Flags.elm  Fuck.elm  Main.elm  MainTest.elm  Message.elm  Note.elm  Notes.elm  Packages.elm  Page.elm  Users.elm  WithUuid.elm
frontend/src/Api/: Either.elm  Note.elm  NoteAddedPayload.elm  NoteCreatePayload.elm  NoteUpdatePayload.elm  RegisterUserPayload.elm  UserRegisterPayload.elm  WithUuid.elm
postgres/: 0.recreate.sql  1.init.sql
